--- a/index.html
+++ b/index.html
@@ -4,43 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>My-Layout</title>
 </head>
 <body>
 
     <header class="cabecalho" >
-        <img src="" alt="">
+        <img src="./img/logo.png" alt="monitor de computador">
         <nav>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="">item-1</a>
+            <a href="">item-2</a>
+            <a href="">item-3</a>
         </nav>
 
         <h2 class="tit-sec">Seção de fotos</h2>
 
         <section class="conteudo">
         <div>
-            <img src="" alt="">
+            <img src="./img/lobo1.jpg" alt="lobo1">
             <p>legenda</p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/lobo2.jpg" alt="lobo2">
             <p>legenda</p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/lobo3.jpg" alt="lobo3">
             <p>legenda</p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/lobo4.jpg" alt="lobo4">
             <p>legenda</p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/lobo5.jpg" alt="lobo5">
             <p>legenda</p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./img/lobo6.jpg" alt="lobo6">
             <p>legenda</p>
         </div> 
      </section> 
@@ -48,9 +49,9 @@
         <footer class="rodape">
             <h2>"Fale Conosco"</h2>
             <nav>
-                <a href="" href+#="">item-1</a>
-                <a href="" href+#="">item-2</a>
-                <a href="" href+#="">item-3</a>
+                <a href="#" ><img src="./img/social-1.png" alt="">item-1</a>
+                <a href="#" ><img src="./img/social-2.png" alt=""> item-2</a>
+                <a href="#" ><img src="./img/social-3.png" alt=""> item-3</a>
             </nav>
         </footer>
     
