estilos gerais do cabeçalho

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <footer class="rodape">
             <h2>"Fale Conosco"</h2>
             <nav>
-                <a href="#" ><img src="./img/social-1.png" alt="">item-1</a>
-                <a href="#" ><img src="./img/social-2.png" alt=""> item-2</a>
-                <a href="#" ><img src="./img/social-3.png" alt=""> item-3</a>
+                <a href="#" ><img src="./img/social-1.png" alt="item-1"></a>
+                <a href="#" ><img src="./img/social-2.png" alt="item-2"></a>
+                <a href="#" ><img src="./img/social-3.png" alt="item-3"></a>
             </nav>
         </footer>
     
