estilizaçao da tag a

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
     <title>My-Layout</title>
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
             <a href="">item-2</a>
             <a href="">item-3</a>
         </nav>
-
+    </header>
         <h2 class="tit-sec">Seção de fotos</h2>
 
         <section class="conteudo">
@@ -45,10 +45,10 @@
             <p>legenda</p>
         </div> 
      </section> 
-     </header>
+     
         <footer class="rodape">
             <h2>"Fale Conosco"</h2>
-            <nav>
+            <nav>s
                 <a href="#" ><img src="./img/social-1.png" alt="item-1"></a>
                 <a href="#" ><img src="./img/social-2.png" alt="item-2"></a>
                 <a href="#" ><img src="./img/social-3.png" alt="item-3"></a>
